flickr30 finetune scores

--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "# local\n",
     "DATA_JSON_PATH = 'data30.json'\n",
     "IMGS_PATH = '/run/media/kelwa/DEV/data/flickr30k/Images/'\n",
-    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr30k_5_cap_per_img_2_min_word_freq_resnet101_prefinetune.pth.tar'\n",
+    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr30k_5_cap_per_img_2_min_word_freq_resnet101_finetune.pth.tar'\n",
     "# kaggle paths\n",
     "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
     "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'\n"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,8 +63,8 @@
      "output_type": "stream",
      "text": [
       "Loaded Checkpoint!!\n",
-      "Last Epoch: 7\n",
-      "Best Bleu-4: 0.16813591633971395\n"
+      "Last Epoch: 11\n",
+      "Best Bleu-4: 0.17585754666541067\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 155070/155070 [00:00<00:00, 222454.97it/s]\n"
+      "100%|██████████| 155070/155070 [00:00<00:00, 298161.10it/s]\n"
      ]
     },
     {
@@ -111,7 +111,7 @@
        "12096"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 9, 101, 236, 6, 9, 426, 2]"
+       "[1, 9, 101, 392, 78, 9, 4978, 2]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -319,11 +319,11 @@
     {
      "data": {
       "text/plain": [
-       "['<sos> a dog running in a field <eos>',\n",
-       " '<sos> a dog running in a grassy field <eos>']"
+       "['<sos> a dog jumps over a hurdle <eos>',\n",
+       " '<sos> a brown dog jumps over a hurdle <eos>']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['<sos>', 'a', 'dog', 'running', 'in', 'a', 'field', '<eos>']"
+       "['<sos>', 'a', 'dog', 'jumps', 'over', 'a', 'hurdle', '<eos>']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,14 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [06:23<00:00, 13.04it/s]\n"
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:27<00:00, 24.14it/s]\n"
      ]
     },
     {
@@ -509,10 +509,10 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 61.4238120287568\n",
-      "2: 43.275355242426095\n",
-      "3: 30.18046205131241\n",
-      "4: 21.053627908552482\n",
+      "1: 63.54625550660793\n",
+      "2: 45.03356444855022\n",
+      "3: 31.69343570783961\n",
+      "4: 22.30082901251822\n",
       "-------------------------\n"
      ]
     }
@@ -523,14 +523,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [04:32<00:00, 18.34it/s]\n"
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [03:57<00:00, 21.07it/s]\n"
      ]
     },
     {
@@ -538,10 +538,10 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 62.871832537642305\n",
-      "2: 44.292721910368876\n",
-      "3: 30.864974410267394\n",
-      "4: 21.53056172815266\n",
+      "1: 64.31220201306728\n",
+      "2: 45.5251368754951\n",
+      "3: 32.38723129370634\n",
+      "4: 23.07429032664538\n",
       "-------------------------\n"
      ]
     }
@@ -552,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [03:35<00:00, 23.15it/s]\n"
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:59<00:00, 27.82it/s]\n"
      ]
     },
     {
@@ -567,10 +567,10 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 59.62026352401997\n",
-      "2: 41.45438962548781\n",
-      "3: 28.514820536432968\n",
-      "4: 19.65818028831556\n",
+      "1: 61.123197163806296\n",
+      "2: 42.936593246185\n",
+      "3: 29.775037258795304\n",
+      "4: 20.646167109205283\n",
       "-------------------------\n"
      ]
     }
@@ -581,10 +581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -605,7 +603,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [03:21<00:00, 24.82it/s]\n"
+      "EVALUATING AT BEAM SIZE 1: 100%|██████████| 5000/5000 [02:59<00:00, 27.92it/s]\n"
      ]
     },
     {
@@ -613,9 +611,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 59.62026352401997\n",
-      "2: 41.45438962548781\n",
-      "3: 28.514820536432968\n"
+      "1: 61.123197163806296\n",
+      "2: 42.936593246185\n",
+      "3: 29.775037258795304\n"
      ]
     },
     {
@@ -630,7 +628,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 19.65818028831556\n",
+      "4: 20.646167109205283\n",
       "-------------------------\n",
       "*************** Beam size of 2 ***************\n"
      ]
@@ -639,7 +637,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [04:09<00:00, 20.03it/s]\n"
+      "EVALUATING AT BEAM SIZE 2: 100%|██████████| 5000/5000 [03:58<00:00, 20.99it/s]\n"
      ]
     },
     {
@@ -647,9 +645,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 61.4238120287568\n",
-      "2: 43.275355242426095\n",
-      "3: 30.18046205131241\n"
+      "1: 63.54625550660793\n",
+      "2: 45.03356444855022\n",
+      "3: 31.69343570783961\n"
      ]
     },
     {
@@ -664,7 +662,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 21.053627908552482\n",
+      "4: 22.30082901251822\n",
       "-------------------------\n",
       "*************** Beam size of 3 ***************\n"
      ]
@@ -673,7 +671,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [04:00<00:00, 20.79it/s]\n"
+      "EVALUATING AT BEAM SIZE 3: 100%|██████████| 5000/5000 [04:43<00:00, 17.62it/s]\n"
      ]
     },
     {
@@ -681,9 +679,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 62.871832537642305\n",
-      "2: 44.292721910368876\n",
-      "3: 30.864974410267394\n"
+      "1: 64.31220201306728\n",
+      "2: 45.5251368754951\n",
+      "3: 32.38723129370634\n"
      ]
     },
     {
@@ -698,7 +696,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 21.53056172815266\n",
+      "4: 23.07429032664538\n",
       "-------------------------\n",
       "*************** Beam size of 4 ***************\n"
      ]
@@ -707,7 +705,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 4: 100%|██████████| 5000/5000 [06:21<00:00, 13.12it/s]\n"
+      "EVALUATING AT BEAM SIZE 4: 100%|██████████| 5000/5000 [04:58<00:00, 16.76it/s]\n"
      ]
     },
     {
@@ -715,9 +713,9 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 63.22916666666667\n",
-      "2: 44.56638923183232\n",
-      "3: 31.18450874712517\n"
+      "1: 64.40847503864691\n",
+      "2: 45.8716912526639\n",
+      "3: 32.61201588518963\n"
      ]
     },
     {
@@ -732,7 +730,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4: 21.857565974982023\n",
+      "4: 23.235058922423306\n",
       "-------------------------\n",
       "*************** Beam size of 5 ***************\n"
      ]
@@ -741,7 +739,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "EVALUATING AT BEAM SIZE 5: 100%|██████████| 5000/5000 [06:15<00:00, 13.32it/s]\n"
+      "EVALUATING AT BEAM SIZE 5: 100%|██████████| 5000/5000 [05:38<00:00, 14.77it/s]\n"
      ]
     },
     {
@@ -749,10 +747,10 @@
      "output_type": "stream",
      "text": [
       "----- Bleu-n Scores -----\n",
-      "1: 63.77050771769731\n",
-      "2: 44.95056791638245\n",
-      "3: 31.482991527519317\n",
-      "4: 22.05915378840812\n",
+      "1: 64.8227213662521\n",
+      "2: 46.212067416932584\n",
+      "3: 32.929193446645684\n",
+      "4: 23.41989863202648\n",
       "-------------------------\n"
      ]
     }
