max seq len 100

--- a/Evaluate.ipynb
+++ b/Evaluate.ipynb
@@ -33,11 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# local\n",
-    "DATA_JSON_PATH = 'data30.json'\n",
-    "IMGS_PATH = '/run/media/kelwa/DEV/data/flickr30k/Images/'\n",
-    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr30k_5_cap_per_img_2_min_word_freq_resnet101_finetune.pth.tar'\n",
+    "DATA_JSON_PATH = 'data.json'\n",
+    "IMGS_PATH = 'flickr/Images/'\n",
+    "CHECKPOINT_PATH = 'models/BEST_checkpoint_flickr8k_5_cap_per_img_2_min_word_freq_resnet101_fullvocab_fix_ds_rmsprop_finetune.pth.tar'\n",
     "# kaggle paths\n",
     "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
     "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'\n"
@@ -63,8 +62,8 @@
      "output_type": "stream",
      "text": [
       "Loaded Checkpoint!!\n",
-      "Last Epoch: 11\n",
-      "Best Bleu-4: 0.17585754666541067\n"
+      "Last Epoch: 12\n",
+      "Best Bleu-4: 0.1655661704030113\n"
      ]
     }
    ],
@@ -102,13 +101,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 155070/155070 [00:00<00:00, 298161.10it/s]\n"
+      "100%|██████████| 40000/40000 [00:00<00:00, 385593.60it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "12096"
+       "5089"
       ]
      },
      "execution_count": 7,
@@ -297,7 +296,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 9, 101, 392, 78, 9, 4978, 2]"
+       "[1, 4, 5, 65, 13, 99, 856, 2]"
       ]
      },
      "execution_count": 11,
@@ -319,8 +318,8 @@
     {
      "data": {
       "text/plain": [
-       "['<sos> a dog jumps over a hurdle <eos>',\n",
-       " '<sos> a brown dog jumps over a hurdle <eos>']"
+       "['<sos> a dog runs through an obstacle <eos>',\n",
+       " '<sos> a dog jumps over a hurdle <eos>']"
       ]
      },
      "execution_count": 12,
@@ -340,7 +339,7 @@
     {
      "data": {
       "text/plain": [
-       "['<sos>', 'a', 'dog', 'jumps', 'over', 'a', 'hurdle', '<eos>']"
+       "['<sos>', 'a', 'dog', 'runs', 'through', 'an', 'obstacle', '<eos>']"
       ]
      },
      "execution_count": 13,
@@ -479,13 +478,258 @@
     "\n",
     "    # Calculate BLEU-4 scores\n",
     "#     bleu4 = corpus_bleu(references, hypotheses)\n",
-    "#     return references, hypotheses\n",
+    "    return references, hypotheses\n",
     "    print_scores(references, hypotheses, nltk=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "EVALUATING AT BEAM SIZE 3:   7%|▋         | 326/5000 [00:13<03:15, 23.93it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "references, hypotheses = evaluate(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Bleu-n Scores -----\n",
+      "1: 64.62017684887459\n",
+      "2: 47.13660963689657\n",
+      "3: 33.759143347900405\n",
+      "4: 23.833249590210322\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_scores(references, hypotheses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs = [\" \".join([vocab.itos[i] for i in sent[0]]) for sent in hypotheses]\n",
+    "rs = []\n",
+    "for r in references:\n",
+    "    rs.append([\" \".join([vocab.itos[i] for i in sent]) for sent in r])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16715500221857632"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from statistics import mean\n",
+    "scores = []\n",
+    "for r, h in zip(rs, hs):\n",
+    "    scores.append(meteor_score(r, h))\n",
+    "mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'rouge-1': {'r': 0.16625193332290555,\n",
+       "  'p': 0.25628571428571595,\n",
+       "  'f': 0.2016766824172223},\n",
+       " 'rouge-2': {'r': 0.017239639511404645,\n",
+       "  'p': 0.028233333333333145,\n",
+       "  'f': 0.021407550833937323},\n",
+       " 'rouge-l': {'r': 0.16235420561335967,\n",
+       "  'p': 0.2498857142857165,\n",
+       "  'f': 0.19682711294392224}}"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from rouge_metric import PyRouge\n",
+    "\n",
+    "rouge = PyRouge()\n",
+    "\n",
+    "scores = rouge.evaluate(hs, rs)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5000"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(hs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24547319133151957"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.18359836107954322"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### turn outputs into strings -> bleu_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.translate.meteor_score import meteor_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to /home/kelwa/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('wordnet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs = [\" \".join([vocab.itos[i] for i in sent[0]]) for sent in hypotheses]\n",
+    "rs = []\n",
+    "for r in references:\n",
+    "    rs.append([\" \".join([vocab.itos[i] for i in sent]) for sent in r])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
